lender/tests/fail/repeat_covariant.stderr
error[E0277]: the trait bound `Invariant: CovariantLending` is not satisfied
  --> tests/fail/repeat_covariant.rs:23:30
   |
23 |     let _ = lender::repeat::<Invariant>(v);
   |                              ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `CovariantLending` is not implemented for `Invariant`
  --> tests/fail/repeat_covariant.rs:7:1
   |
 7 | struct Invariant;
   | ^^^^^^^^^^^^^^^^
note: required by a bound in `lender::repeat`
  --> src/sources/repeat.rs
   |
   | pub fn repeat<'a, L>(elt: Lend<'a, L>) -> Repeat<'a, L>
   |        ------ required by a bound in this function
   | where
   |     L: ?Sized + CovariantLending + 'a,
   |                 ^^^^^^^^^^^^^^^^ required by this bound in `repeat`

error[E0277]: the trait bound `Invariant: CovariantLending` is not satisfied
  --> tests/fail/repeat_covariant.rs:23:13
   |
23 |     let _ = lender::repeat::<Invariant>(v);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `CovariantLending` is not implemented for `Invariant`
  --> tests/fail/repeat_covariant.rs:7:1
   |
 7 | struct Invariant;
   | ^^^^^^^^^^^^^^^^
note: required by a bound in `lender::Repeat`
  --> src/sources/repeat.rs
   |
   | pub struct Repeat<'a, L>
   |            ------ required by a bound in this struct
   | where
   |     L: ?Sized + CovariantLending + 'a,
   |                 ^^^^^^^^^^^^^^^^ required by this bound in `Repeat`

error[E0277]: the trait bound `FallibleInvariant: CovariantFallibleLending` is not satisfied
  --> tests/fail/repeat_covariant.rs:30:39
   |
30 |     let _ = lender::fallible_repeat::<FallibleInvariant, String>(v);
   |                                       ^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `CovariantFallibleLending` is not implemented for `FallibleInvariant`
  --> tests/fail/repeat_covariant.rs:13:1
   |
13 | struct FallibleInvariant;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `fallible_repeat`
  --> src/fallible_sources/repeat.rs
   |
   | pub fn repeat<'a, L, E>(elt: Result<FallibleLend<'a, L>, E>) -> Repeat<'a, L, E>
   |        ------ required by a bound in this function
   | where
   |     L: ?Sized + CovariantFallibleLending + 'a,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `repeat`

error[E0277]: the trait bound `FallibleInvariant: CovariantFallibleLending` is not satisfied
  --> tests/fail/repeat_covariant.rs:30:13
   |
30 |     let _ = lender::fallible_repeat::<FallibleInvariant, String>(v);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `CovariantFallibleLending` is not implemented for `FallibleInvariant`
  --> tests/fail/repeat_covariant.rs:13:1
   |
13 | struct FallibleInvariant;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `FallibleRepeat`
  --> src/fallible_sources/repeat.rs
   |
   | pub struct Repeat<'a, L, E>
   |            ------ required by a bound in this struct
   | where
   |     L: ?Sized + CovariantFallibleLending + 'a,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `FallibleRepeat`
